<resources>
    <string name="app_name">LinkStation</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in_to_your_linkstation">Log in to your LinkStation</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="divider">Divider</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="dashboard">Dashboard</string>
    <string name="stations">Stations</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="analytics">Analytics</string>
    <string name="earn">Earn</string>
    <string name="username">dipakkumarkalwar</string>
    <string name="total_clicks_count">69K</string>
    <string name="total_clicks">Total Monthly Clicks</string>
    <string name="account_analytics">Account Analytics</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="views">Views</string>
    <string name="clicks">Clicks</string>
    <string name="views_count">380k</string>
    <string name="clicks_count">14.2k</string>
    <string name="logo">Logo</string>
    <string name="latest_published_stations">Latest Published Stations</string>
    <string name="station_url">Station URL</string>
    <string name="station_title">Station Title</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="logout">Log Out</string>
    <string name="fullName">Dipak Kumar Kalwar</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="url"><u>www.link.st/<b>JohnDoe</b></u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>