<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/space_grotesk_bold"
            android:text="Organize Your Links"
            android:textColor="#000"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk"
            android:text="Create an Account for Linkstation"
            android:textColor="#454545"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/textbox"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_marginTop="15dp"
            android:autofillHints="username"
            android:hint="Username"
            android:inputType="text"
            style="@style/textbox" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/textbox" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_marginTop="15dp"
            android:autofillHints="password"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            style="@style/textbox" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            style="@style/button_yellow"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:text="@string/register" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alreadyHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/space_grotesk"
                android:text="Already have an account?"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login"
                style="@style/links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Login"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
