<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    android:background="@drawable/green_section"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/station_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_images_border"
            android:clipToOutline="true"
            android:layout_gravity="center_vertical">
            <ImageView
                android:id="@+id/stationImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/round_images_border"
                android:scaleType="centerCrop"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stationURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/space_grotesk"
                android:text="@string/station_url"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/stationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/space_grotesk"
                android:text="@string/station_title"
                android:textColor="#80000000"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#ffffff"
        app:layout_constraintTop_toBottomOf="@+id/station_summary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/divider_line">


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/viewsLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/views_logo" />

            <TextView
                android:id="@+id/viewsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/trispace"
                android:text="@string/app_name"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/clicksLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/clicks_logo" />

            <TextView
                android:id="@+id/clicksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/trispace"
                android:text="@string/app_name"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/sharesLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/shares_logo" />

            <TextView
                android:id="@+id/sharesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/trispace"
                android:text="@string/app_name"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>